# enumerate

./: .gitignore  .travis.yml  HLint.hs  LICENSE  Main.hs  Makefile  NOTES.md  README.md  TODO.txt  cabal-sboosali.project  cabal.project  default.nix  dependencies.dot  enumerate-function.cabal  enumerate.cabal  ghcjs.project  package.nix  repl.sh  shell.nix  stack.yaml  watch.sh
benchmarks/: Bench.hs
compatibility/Spiros/: Prelude.hs
docs/: Old.txt  TODO.txt
enumerate/: LICENSE  Main.hs  README.md  build.sh  circle.yml  default.nix  doctest.sh  enumerate.cabal  ghcid.txt  repl.sh  shell.nix  test.sh
enumerate-function/: .travis.yml  LICENSE  default.nix  enumerate-function.cabal  ghcid.txt  repl.sh  shell.nix  watch.sh
enumerate-function/benchmarks/: Bench.hs
enumerate-function/include/: sboo-base-feature-macros.h
enumerate-function/sources/: .dir-locals.el
enumerate-function/sources/Enumerate/: Function.hs
enumerate-function/sources/Enumerate/Function/: Example.hs  Extra.hs  Invert.hs  Main.hs  Map.hs  Reify.hs  Types.hs
enumerate-function/sources/Enumerate/Orphans/: Function.hs
enumerate-function/tests/: DocTest.hs  DocTests.hs  UnitTest.hs
enumerate-function/tests/Enumerate/Function/: Test.hs
enumerate/include/: sboo-base-feature-macros.h
enumerate/old/: OldCode.txt
enumerate/old/sources/Enumerate/: Compatibility.hs
enumerate/sources/: .dir-locals.el  Enumerate.hs
enumerate/sources/Enumerate/: Between.hs  Cardinality.hs  Compatibility.hs  Derived.hs  Enum.hs  Example.hs  Extra.hs  Ix.hs  Modular.hs  Prelude.hs  Test.hs  Types.hs  Utilities.hs
enumerate/sources/Enumerate/Orphans/: GHC.hs  Large.hs
enumerate/test/: DocTests.hs  UnitTests.hs
enumerate/tests/: DocTest.hs  DocTests.hs
enumerate/tests/Enumerate/: Test.hs
executables/: Main.hs
sources/: Enumerate.hs
sources/Data/: Cardinality.hs  CoRec.hs  Enumerate.hs  TEnumerate.hs
sources/Data/CoRec/: MemoTrie.hs
sources/Data/Enumerate/: Domain.hs  Enum.hs  Example.hs  Extra.hs  Function.hs  Large.hs  Main.hs  Map.hs  Reify.hs  Types.hs
sources/Data/MemoTrie/: Generic.hs
sources/Enumerate/: Cardinality.hs  Enum.hs  Example.hs  Extra.hs  Function.hs  Large.hs  Main.hs  Map.hs  Reify.hs  Types.hs
sources/Enumerate/Function/: Example.hs  Extra.hs  Invert.hs  Map.hs  Reify.hs  Types.hs
sources/Enumerate/Orphans/: Function.hs  GHC.hs  Large.hs
tests/: DocTest.hs  UnitTest.hs
tests/Enumerate/: Test.hs
