name:                enumerate-function
version:             0.2.3

synopsis:            Invert functions via enumeration
description:
 Invert functions by brute-force, enumerating their domain (the <https://hackage.haskell.org/package/enumerate @enumerate@> package provides a generalized @Enum@). Once a function is "reified" into its inputs\/outputs, we can check properties like:
 .
 * Totality 
 * Injectivity
 * Surjectivity
 .
 See the "Enumerate.Function" module for examples for documentation.

homepage:            http://github.com/sboosali/enumerate#readme
license:             BSD3
license-file:        LICENSE
author:              Spiros Boosalis
maintainer:          samboosalis@gmail.com
copyright:           2018 Spiros Boosalis
category:            TODO
build-type:          Simple
cabal-version:       >=1.10

-- $ stack new PACKAGE spirosboosalis.hsfiles -p "module:MODULE"

extra-source-files:
  README.md
  .travis.yml
  HLint.hs
  stack.yaml

--data-files:
--  data/

source-repository head
  type:     git
  location: https://github.com/sboosali/enumerate
  subdir:   enumerate-function

----------------------------------------

library
 hs-source-dirs:      sources
 default-language:    Haskell2010
 ghc-options:         -Wall -fno-warn-unticked-promoted-constructors
 default-extensions: AutoDeriveTypeable DeriveDataTypeable DeriveGeneric
                     DeriveFunctor DeriveFoldable DeriveTraversable
                     LambdaCase EmptyCase TypeOperators PostfixOperators
                     ViewPatterns BangPatterns KindSignatures
                     NamedFieldPuns RecordWildCards TupleSections
                     MultiWayIf DoAndIfThenElse EmptyDataDecls
                     MultiParamTypeClasses FlexibleContexts FlexibleInstances
                     TypeFamilies FunctionalDependencies
                     ScopedTypeVariables StandaloneDeriving

 exposed-modules:
  Enumerate.Function
  Enumerate.Function.Types
  Enumerate.Function.Map
  Enumerate.Function.Reify
  Enumerate.Function.Invert

  Enumerate.Orphans.Function

 -- (for doctest / haddocks / exectuable) other-modules:
  Enumerate.Function.Extra
  Enumerate.Function.Example

 build-depends:
    base >=4.7 && <5

  , enumerate 
   -- >=0.2.2

  , containers >=0.5


  , semigroups >=0.18
  , exceptions >=0.8
  , MemoTrie >=0.6
  , deepseq >= 1.3

  -- ,
  -- , transformers
  -- , mtl
  -- , bytestring
  -- , stm
  -- , template-haskell

  -- ,
  -- , lens
  -- , exceptions
  -- , free
  -- , bifunctors
  -- , profunctors
  -- , either
  -- , pipes
  -- , formatting
  -- , servant
  -- , Earley
  -- , split
  -- , interpolatedstring-perl6
  -- , wl-pprint-text
  -- , text
  -- , aeson
  -- , hashable
  -- , unordered-containers
  -- , async
  -- , parallel


-- $ stack build && stack exec -- example-enumerate-function
executable example-enumerate-function
 hs-source-dirs:      executables
 main-is:             Main.hs

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , enumerate-function


-- $ stack test doctest
test-suite doctest
 hs-source-dirs:      tests
 main-is:             DocTest.hs
 type:                exitcode-stdio-1.0

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , enumerate-function
  , doctest


-- $ stack test unittest
test-suite unittest
 hs-source-dirs:      tests
 main-is:             UnitTest.hs
 type:                exitcode-stdio-1.0

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 other-modules:
  Enumerate.Test

 build-depends:
    base
  , enumerate-function
  , hspec ==2.2.*
  , QuickCheck ==2.8.*
  -- , tasty
  -- , tasty-quickcheck


-- $ stack bench
benchmark command
 hs-source-dirs:      benchmarks
 main-is:             Bench.hs
 type:                exitcode-stdio-1.0

 default-language: Haskell2010
 ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , enumerate-function
  , criterion
  , deepseq
