cabal-version:       >=1.10
build-type:          Simple

--------------------------------------------------

name:                enumerate
version:             0.2.3

--------------------------------------------------
-- Information -----------------------------------
--------------------------------------------------

synopsis:            Enumerate all the values in a finite type (automatically)
description:
  @enumerate@ provides: 
  .
    * (1) a typeclass for enumerating all values in a finite type,
    * (2) a generic instance for automatic deriving, and
    * (3) helpers that reify functions (partial or total, monadic or pure)
    into a Map.
  .
  see the "Enumerable" module for extensive documentation.

--------------------------------------------------

homepage:            https://github.com/sboosali/enumerate
license:             MIT
license-file:        LICENSE
author:              Sam Boosalis
maintainer:          samboosalis@gmail.com
-- copyright:
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.24

--------------------------------------------------

tested-with: GHC == 8.0.2
             GHC == 8.2.2

-- `multi-ghc-travis` uses `Tested-With`. 
-- ..\multi-ghc-travis\make_travis_yml.hs enumerate.cabal > .travis.yml

--------------------------------------------------

-- extra-source-files:

--data-files:
--  data/

--------------------------------------------------

source-repository head
  type:     git
  location: https://github.com/sboosali/enumerate
  subdir:   enumerate

--------------------------------------------------
-- Flags -----------------------------------------
--------------------------------------------------

-- You can disable the doctests test suite with -f-test-doctest.

flag test-doctest
  default:     False
  description: Run the doctests (with the eponymous `doctest`), called the `test documentation` unit (in this cabal file). 
  manual:      True

--------------------------------------------------

-- You can disable the HUnit test suite with -f-test-unit. 

flag test-unit
  default:     False
  description: Run the unit tests, called the `test unit` unit (in this cabal file).  
  manual:      True

--------------------------------------------------

-- -- You can disable the QuickCheck test suite with -f-test-properties. 

-- flag test-properties
--   default:     False
--   description: Run the property tests (i.e. QuickCheck), called the `test properties` unit (in this cabal file).  
--   manual:      True

--------------------------------------------------

flag orphans
  default:     False
  description: Implement orphan instances for some types in `base`. Either way, they are not exported by default (by the root module).
  manual:      True

--------------------------------------------------

flag dump-core
  default:     False
  description: Dump HTML for the core generated by GHC during compilation
  manual:      True

--------------------------------------------------
-- Library ---------------------------------------
--------------------------------------------------

library

------------------------------

 hs-source-dirs: sources

------------------------------

 exposed-modules:
                 Enumerate
                 Enumerate.Types
                 Enumerate.Enum
                 Enumerate.Cardinality
                 Enumerate.Between
                 Enumerate.Modular

                 Enumerate.Example
                 Enumerate.Test
                 Enumerate.Extra

  -- Enumerate.Domain
  -- Data.CoRec
  -- Data.CoRec.MemoTrie
  -- Data.TEnumerate

------------------------------

--TODO toggle orphans 

 if flag(orphans) 
    exposed-modules:
       Enumerate.Orphans.Large

------------------------------

 if flag(orphans) && impl(ghc >= 8.0) && impl(ghc <= 8.2)
    exposed-modules:
       Enumerate.Orphans.GHC       

------------------------------

 ghc-options:
  -Wall
  -Wcompat

  -- disable
  -Wno-unticked-promoted-constructors

  -- enable
  -Wincomplete-uni-patterns
  -Wincomplete-record-updates
  -Widentities
  -Wmissing-methods

  -- raise a warning into an error
  -- -Werror=missing-fields

  -- use `typed-holes`, not `undefined`, during development
  -fdefer-typed-holes
  -Wtyped-holes

 -- if impl(ghc >= 8.0) && impl(ghc <= 8.4)
 --    exposed-modules:
 --       Enumerate.Orphans.GHC
 --       Enumerate.Orphans.Large
 -- else   
 --    exposed-modules:
 --       Enumerate.Orphans.Large

------------------------------

 build-depends:

               base >= 4.7 && < 5

               ---base             >= 4.7 && < 5
               ---base-noprelude   >= 4.7 && < 5

             , spiros           >=0.2
             , ghc-prim         >=0.3
             , array            >=0.5
             , template-haskell >=2.9
             , containers       >=0.5
             , vinyl            >=0.5
             , deepseq          >= 1.3
-- , modular-arithmetic==1.2.*

------------------------------

 default-language: Haskell2010

 default-extensions:
                    NoImplicitPrelude
                    AutoDeriveTypeable DeriveDataTypeable DeriveGeneric DeriveFunctor DeriveFoldable DeriveTraversable
                    PackageImports

 other-extensions: ConstraintKinds DataKinds DefaultSignatures DeriveAnyClass DeriveDataTypeable DeriveGeneric ExplicitNamespaces FlexibleContexts FlexibleInstances GADTs GeneralizedNewtypeDeriving KindSignatures LambdaCase RankNTypes ScopedTypeVariables TupleSections TypeFamilies TypeOperators UndecidableInstances

------------------------------

 -- cabal new-build -fdump-core 
 -- stack build --flag enumerate:dump-core 
 if flag(dump-core)
  build-depends: dump-core
  ghc-options: -fplugin=DumpCore -fplugin-opt DumpCore:core

------------------------------


--------------------------------------------------
-- Tests -----------------------------------------
--------------------------------------------------

test-suite doctest
 if (!flag(test-doctest) || impl(ghcjs))
    buildable: False
    -- (`ghcjsi` just doesn't work? or `doctest` needs the GHC API?)

 hs-source-dirs:      test
 main-is:             DocTests.hs
 type:                exitcode-stdio-1.0

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , enumerate
  , doctest
  --, cabal-info

--------------------------------------------------

test-suite unit
 if !flag(test-unit)
    buildable: False

 hs-source-dirs:      test
 main-is:             UnitTests.hs
 type:                exitcode-stdio-1.0

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 other-modules:
  Enumerate.Test

 build-depends:
    base
  , enumerate
  , hspec      >=2.2
  , QuickCheck >=2.8
  , smallcheck >=1.1
  -- , tasty
  -- , tasty-quickcheck
  -- , tasty-hunit

--------------------------------------------------